finished home and team pages

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,9 +4,9 @@ title: Le Wagon - Middleman
 
 <div id="home">
   <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
+    <%= image_tag "index.png", width: "200" %>
     <p>
-      Middleman is now running!
+      Growing mushrooom bitches!
     </p>
     <p class="about">
       <%= link_to "More about this template", "about.html" %>
