--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -8,12 +8,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  img {
+    height: 50px;
+  }
 }
 
 /* Logo */
-.navbar-wagon-brand img {
-  height: 50px;
-}
 
 /* User Avatar */
 .navbar-wagon .avatar {
@@ -41,7 +41,7 @@
   font-size: 14px;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+  color: $red;
   text-decoration: none;
 }
 
